@@ -1413,7 +1413,8 @@ please see math/README to configure.',
 'userrights-groupsavailable'       => 'Available groups:',
 'userrights-groups-help'           => 'You may alter the groups this user is in.
 A checked box means the user is in that group.
-An unchecked box means the user is not in that group.',
+An unchecked box means the user is not in that group.
+A * indicates that you cannot remove the group once you have added it, or vice versa.',
 'userrights-reason'                => 'Reason for change:',
 'userrights-available-none'        => 'You may not alter group membership.',
 'userrights-available-add'         => 'You can add any user to {{PLURAL:$2|this group|these groups}}: $1.',
@@ -1426,6 +1427,7 @@ An unchecked box means the user is not in that group.',
 'userrights-notallowed'            => 'Your account does not have permission to assign user rights.',
 'userrights-changeable-col'        => 'Groups you can change',
 'userrights-unchangeable-col'      => 'Groups you cannot change',
+'userrights-irreversible-marker'   => '$1*', # only translate this message to other languages if you have to change it
 
 # Groups
 'group'                => 'Group:',
